# python-orchestration-sdk

./: .env.example  .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml  security-scan.yml
docs/: README.md  api-reference.md  authentication.md  error-handling.md  getting-started.md  processing-payments.md
docs/providers/: adyen.md  checkout.md  index.md
src/orchestration_sdk/: client.py  exceptions.py  models.py
src/orchestration_sdk/providers/: adyen.py  checkout.py
src/orchestration_sdk/utils/: model_utils.py  request_client.py
src/payment_orchestration_sdk/: __init__.py  basis_theory.py  client.py  config.py  exceptions.py  models.py  utils.py
src/payment_orchestration_sdk/providers/: adyen.py  checkout.py
src/payment_orchestration_sdk/utils/: model_utils.py  request_client.py
tests/acceptance/: adyen.py  adyen_test.py  basistheory_test.py  checkout.py  checkout_test.py
tests/integration/: adyen.py  adyen_integration_test.py  checkout_integration_test.py
