[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "orchestration_sdk"
version = "0.1.0"
description = "A Python SDK for payment processing"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
requests = ">=2.25.0"
basistheory = { git = "https://github.com/Basis-Theory/basistheory-python.git" }

[tool.poetry.group.test.dependencies]
pytest = ">=6.0"
pytest-cov = ">=2.0"
pytest-asyncio = ">=0.25.0"
python-dotenv = ">=1.0.0"
mypy = ">=1.0.0"